--- a/.github/workflows/site.yaml
+++ b/.github/workflows/site.yaml
@@ -39,3 +39,4 @@ jobs:
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           CR_RELEASE_NAME_TEMPLATE: "{{ .Name }}-chart-latest"
+          CR_SKIP_EXISTING: true
