--- a/.github/workflows/site.yaml
+++ b/.github/workflows/site.yaml
@@ -38,5 +38,5 @@ jobs:
           charts_dir: helm-chart
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          CR_RELEASE_NAME_TEMPLATE: "{{ .Name }}-chart-latest"
+          CR_RELEASE_NAME_TEMPLATE: "{{ .Name }}-chart-{{ .Version }}"
           CR_SKIP_EXISTING: true
