--- a/helm-chart/kuberay-operator/values.yaml
+++ b/helm-chart/kuberay-operator/values.yaml
@@ -5,8 +5,8 @@
 replicaCount: 1
 
 image:
-  repository: kuberay/operator
-  tag: nightly
+  repository: controller
+  tag: latest2
   pullPolicy: IfNotPresent
 
 nameOverride: "kuberay-operator"
