--- a/helm-chart/ray-cluster/templates/raycluster-cluster.yaml
+++ b/helm-chart/ray-cluster/templates/raycluster-cluster.yaml
@@ -141,6 +141,7 @@ spec:
         tolerations: {{- toYaml .Values.worker.tolerations | nindent 10 }}
         nodeSelector: {{- toYaml .Values.worker.nodeSelector | nindent 10 }}
       metadata:
+        name: haha
         annotations: {{- toYaml .Values.worker.annotations | nindent 10 }}
         labels:
           rayNodeType: {{ .Values.worker.type }}
