--- a/.github/workflows/actions/compatibility/action.yaml
+++ b/.github/workflows/actions/compatibility/action.yaml
@@ -68,6 +68,7 @@ runs:
       kustomize edit set image kuberay/apiserver=kuberay/apiserver:${{ steps.vars.outputs.sha_short }}
       popd
       echo "Using Ray image ${{ inputs.ray_version }}"
-      python ./tests/compatibility-test.py -k kuberay/operator:${{ steps.vars.outputs.sha_short }} \
-        -a kuberay/apiserver:${{ steps.vars.outputs.sha_short }} -r rayproject/ray:${{ inputs.ray_version }}
+      RAY_IMAGE="rayproject/ray:${{ inputs.ray_version }}" \
+      OPERATOR_IMAGE="kuberay/operator:${{ steps.vars.outputs.sha_short }}" \
+      APISERVER_IMAGE="kuberay/apiserver:${{ steps.vars.outputs.sha_short }}" python ./tests/compatibility-test.py
     shell: bash
