--- a/.github/workflows/test-job.yaml
+++ b/.github/workflows/test-job.yaml
@@ -232,17 +232,17 @@ jobs:
       id: vars
       run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
 
-    - name: Get dependencies
-      run: go mod download
-      working-directory: ${{env.working-directory}}
+    # - name: Get dependencies
+    #   run: go mod download
+    #   working-directory: ${{env.working-directory}}
 
-    - name: Build
-      run: make build
-      working-directory: ${{env.working-directory}}
+    # - name: Build
+    #   run: make build
+    #   working-directory: ${{env.working-directory}}
 
-    - name: Test
-      run: make test
-      working-directory: ${{env.working-directory}}
+    # - name: Test
+    #   run: make test
+    #   working-directory: ${{env.working-directory}}
 
     - name: Set up Docker
       uses: docker/setup-docker-action@v4
@@ -291,11 +291,14 @@ jobs:
       working-directory: ${{env.working-directory}}
       if: contains(fromJson('["refs/heads/master"]'), github.ref)
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
     - name: Build MultiArch Docker Image and Push on Merge
       uses: docker/build-push-action@v5
       env:
-        REPO_ORG: kuberay
-        REPO_NAME: operator
+        REPO_ORG: kevin85421
+        REPO_NAME: kuberay
       with:
         platforms: linux/amd64,linux/arm64
         context: ${{env.working-directory}}
