--- a/.github/workflows/test-job.yaml
+++ b/.github/workflows/test-job.yaml
@@ -262,7 +262,7 @@ jobs:
         registry: quay.io
         username: ${{ secrets.QUAY_USERNAME }}
         password: ${{ secrets.QUAY_ROBOT_TOKEN }}
-      if: contains(fromJson('["refs/heads/master"]'), github.ref)
+      # if: contains(fromJson('["refs/heads/master"]'), github.ref)
 
     # Build operators inside the gh runner vm directly and then copy the go binaries to docker images using the Dockerfile.buildx
     - name: Compile linux/amd64 Operator go binary
@@ -273,7 +273,7 @@ jobs:
       run: |
         CGO_ENABLED=$CGO_ENABLED GOOS=$GOOS GOARCH=$GOARCH go build -tags strictfipsruntime -a -o manager-$GOARCH main.go
       working-directory: ${{env.working-directory}}
-      if: contains(fromJson('["refs/heads/master"]'), github.ref)
+      # if: contains(fromJson('["refs/heads/master"]'), github.ref)
 
     - name: Cross Compile linux/arm64 Operator binary
       env:
@@ -286,7 +286,7 @@ jobs:
         sudo apt-get install -y gcc-aarch64-linux-gnu libc6-dev-arm64-cross
         CC=$CC CGO_ENABLED=$CGO_ENABLED GOOS=$GOOS GOARCH=$GOARCH go build -tags strictfipsruntime -a -o manager-$GOARCH main.go
       working-directory: ${{env.working-directory}}
-      if: contains(fromJson('["refs/heads/master"]'), github.ref)
+      # if: contains(fromJson('["refs/heads/master"]'), github.ref)
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
